# apexion

./: CLAUDE.md  Cargo.toml  NOTES.md  PRODUCTION_ROADMAP.md  README.md  apex-runtime.js  apex-server.ts  apex-service-worker.js  apex-worker.js  demo.html  dreamhouse-demo.html  dreamhouse-sw-demo.html
examples/: test_debug.rs
examples/web-worker/: README.md  apex-worker.ts  index.html  main.ts
runtime/: apex-runtime.ts  apex-stdlib.ts  index.ts
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  wasm.rs
src/sql/: converter.rs  date_literals.rs  ddl.rs  dialect.rs  error.rs  mod.rs  schema.rs  standard_objects.rs
src/transpile/: codegen.rs  context.rs  error.rs  mod.rs
tests/: dreamhouse_e2e_tests.rs  dreamhouse_tests.rs  integration_tests.rs  lexer_tests.rs  nested_test.rs  new_features_tests.rs  parser_declaration_tests.rs  parser_expression_tests.rs  parser_statement_tests.rs  real_files_tests.rs  sql_conversion_tests.rs  sqlite_e2e_tests.rs  standard_objects_soql_tests.rs
