[package]
name = "apexrust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde", "serde_json", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies]
thiserror = "1.0"
logos = "0.14"

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
rusqlite = { version = "0.31", features = ["bundled"] }
